bugfix cropped sprite

--- a/media/catScratch.css
+++ b/media/catScratch.css
@@ -25,8 +25,11 @@ body.vscode-dark {
 	width: 100vw;
 	height: 100vh;
 }
+.app * {
+	box-sizing: border-box;
+}
 .editor-area{
-	flex-grow: 1;
+	flex-grow: 9;
 	padding: 10px 20px;
 }
 .editor-area canvas {
@@ -36,6 +39,9 @@ body.vscode-dark {
 	height: 100vh;
 	overflow: auto;
 	padding: 10px;
+	flex-grow: 1;
+    min-width: fit-content;
+
 }
 .minimap-shadow{
 	height: 100vh;
